[package]
name = "wurstdoktor"
version = "0.2.0"
authors = ["Cokemonkey11"]
edition = "2018"
description = "A wurst to yaml parser for public sourcecode documentation"
license = "MIT OR Apache-2.0"
homepage = "https://cokemonkey11.github.io/wurstdoktor/"
repository = "https://github.com/Cokemonkey11/wurstdoktor"
readme = "README.md"
keywords = ["wurst", "pom", "parser", "yaml", "sqlite"]
categories = ["command-line-utilities", "development-tools", "parser-implementations"]

[features]
sqlitedb = ["rusqlite", "serde_rusqlite"]

[dependencies]

failure        = "0.1.5"
pom            = "3.0.2"
rusqlite       = { version = "0.16.0", features = ["backup"], optional = true }
serde          = { version = "1.0", features = ["derive"] }
serde_derive   = "1.0"
serde_rusqlite = { version = "0.17.0", optional = true }
serde_yaml     = "0.8"
structopt      = "0.2"
