[package]
name = "wurstdoktor"
version = "0.2.0"
authors = ["Cokemonkey11"]
edition = "2021"
description = "A wurst to yaml parser for public sourcecode documentation"
license = "MIT OR Apache-2.0"
homepage = "https://cokemonkey11.github.io/wurstdoktor/"
repository = "https://github.com/Cokemonkey11/wurstdoktor"
readme = "README.md"
keywords = ["wurst", "pom", "parser", "yaml", "sqlite"]
categories = ["command-line-utilities", "development-tools", "parser-implementations"]

[features]
sqlitedb = ["rusqlite", "serde_rusqlite"]

[dependencies]
anyhow         = "1.0"
clap = { version = "3.2.22", features = ["derive"] }
pom            = "3.0.2"
rusqlite       = { version = "0.27.0", features = ["bundled"], optional = true }
serde          = { version = "1.0", features = ["derive"] }
serde_derive   = "1.0"
serde_rusqlite = { version = "0.30.1", optional = true }
serde_yaml     = "0.8"
thiserror = "1.0.35"
